# CSCI-561-HW2

./: CMakeLists.txt  calibrate.cpp  homwork.cpp  readme.md  utils.cpp
ai/: BaseEvaluator.h  BoardHelper.h  ConsolePlayer.h  Evaluator.h  GA.h  GameEngine.h  MTDFPlayer.h  MTDf.h  MinMaxPlayer.h  Minimax.h  NMTDF.h  Player.h  RTEvaluator.h  RandomPlayer.h  ScriptPlayer.h
